--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Blogs | <%= title %></title>
   <link rel="stylesheet" href="/style.css">
+  <script src="https://kit.fontawesome.com/e6b04318c2.js" crossorigin="anonymous"></script>
 </head>
